test/testData/parser/negative/expressions/ref.err
test/testData/parser/negative/expressions/ref.c:15:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:16:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:17:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:19:3: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:19:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:21:3: error: address of register variable requested
test/testData/parser/negative/expressions/ref.c:21:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:23:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:25:3: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:25:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:27:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:28:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:30:3: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:30:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:31:3: error: cannot take the address of an rvalue of type 'signed int'
test/testData/parser/negative/expressions/ref.c:31:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:33:3: error: cannot take the address of an rvalue of type 'float'
test/testData/parser/negative/expressions/ref.c:33:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:35:3: error: address of bit-field requested
test/testData/parser/negative/expressions/ref.c:35:3: warning: expression result unused
test/testData/parser/negative/expressions/ref.c:36:3: error: address of bit-field requested
test/testData/parser/negative/expressions/ref.c:36:3: warning: expression result unused
